--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 
 #scrollThis {
+/*
     width: 640px;
     height: 480px;
-    overflow-y: scroll;
+*/
+/*    overflow-y: scroll;*/
 }
 
 .color {
-    height: 75%;
+    height: 75vh;
 }
 
 .t1 {
